objects/RevenueAttribution__c.object
<CustomObject>
    <description>T&amp;E module</description>
    <fields>
        <fullName>AccountOwnerEmail__c</fullName>
        <description>This field is created to retrieve project&apos;s account owner and is referred in email template.</description>
        <formula>Project__r.Account__r.Owner.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountOwnerEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribution_Date__c</fullName>
        <label>Attribution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attribution_Days__c</fullName>
        <inlineHelpText>Maximum two digits allowed</inlineHelpText>
        <label>Attribution Days</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attribution_Hours__c</fullName>
        <formula>Attribution_Days__c  * 8</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribution Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attribution_Month2__c</fullName>
        <formula>Attribution_Period__r.Month__c</formula>
        <label>Attribution Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribution_Month_Number__c</fullName>
        <formula>CASE(Attribution_Month2__c ,&apos;Jan&apos;,1,&apos;Feb&apos;,2,&apos;Mar&apos;,3,&apos;Apr&apos;,4,&apos;May&apos;,5,&apos;Jun&apos;,6,&apos;Jul&apos;,7,&apos;Aug&apos;,8,&apos;Sep&apos;,9,&apos;Oct&apos;,10,&apos;Nov&apos;,11,&apos;Dec&apos;,12,&apos;null&apos;,0,0)</formula>
        <label>Attribution Month Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attribution_Month__c</fullName>
        <label>Attribution Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jan</fullName>
                </value>
                <value>
                    <fullName>Feb</fullName>
                </value>
                <value>
                    <fullName>Mar</fullName>
                </value>
                <value>
                    <fullName>Apr</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>Jun</fullName>
                </value>
                <value>
                    <fullName>Jul</fullName>
                </value>
                <value>
                    <fullName>Aug</fullName>
                </value>
                <value>
                    <fullName>Sep</fullName>
                </value>
                <value>
                    <fullName>Oct</fullName>
                </value>
                <value>
                    <fullName>Nov</fullName>
                </value>
                <value>
                    <fullName>Dec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attribution_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribution Period</label>
        <referenceTo>Milestone_Period__c</referenceTo>
        <relationshipLabel>Attributions</relationshipLabel>
        <relationshipName>Attributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attribution_Rate__c</fullName>
        <label>Attribution Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attribution_Value__c</fullName>
        <formula>(Attribution_Days__c ) * ( Attribution_Rate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribution Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Attribution_Year2__c</fullName>
        <formula>Attribution_Period__r.Year__c</formula>
        <label>Attribution Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attribution_Year__c</fullName>
        <label>Attribution Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                    <default>true</default>
                    <label>2015</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <label>Billable</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Scoped__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Billable</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Subscription Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Attributions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Financial_Period_Closed__c</fullName>
        <formula>Attribution_Period__r.Financial_Period_Closed__c</formula>
        <label>Financial Period Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Financial_Period_Date__c</fullName>
        <formula>Attribution_Period__r.Financial_Period_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Financial Period Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manual_Adjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Manual Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>ProjectObject__c</referenceTo>
        <relationshipLabel>Attributions</relationshipLabel>
        <relationshipName>Attributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Scoped__c</fullName>
        <label>Scoped</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scoped</fullName>
                </value>
                <value>
                    <fullName>Non-scoped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Timesheet_Hours__c</fullName>
        <label>Timesheet Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Attribution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ATTR1{00000}</displayFormat>
        <label>Attribution Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attributions</pluralLabel>
    <recordTypes>
        <fullName>Attribution_Master_RecordType</fullName>
        <active>true</active>
        <label>Attribution Master RecordType</label>
    </recordTypes>
    <recordTypes>
        <fullName>Attribution_ReadOnly_Record_Type</fullName>
        <active>true</active>
        <description>This recordtype is assigned when the attribution period is closed</description>
        <label>Attribution ReadOnly Record Type</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Atrribution_Rate_must_be_greater_than_0</fullName>
        <active>true</active>
        <description>When Project- Scoped equals Scoped and Billable equals Billable then Attribution rate must be completed. Value must be greater than zero.</description>
        <errorConditionFormula>AND(  ISPICKVAL( Scoped__c , &quot;Scoped&quot;) ,  ISPICKVAL(  Billable__c  , &quot;Billable&quot;) ,   OR(Attribution_Rate__c&lt;=0, ISNULL(Attribution_Rate__c) ) )</errorConditionFormula>
        <errorMessage>Attribution Rate must be greater than 0 as this Attribution record is set to Scoped and Billable</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Attribution_rate_cannot_have_any_value</fullName>
        <active>true</active>
        <description>If Scoped equals Non-scoped OR Scoped equals Scoped and Billable equals Free or Subscription Support then the Attribution rate field cannot have a value</description>
        <errorConditionFormula>IF( ISPICKVAL( Scoped__c , &quot;Non-scoped&quot;) ,  NOT( ISNULL( Attribution_Rate__c ) ) ,  IF( OR( ISPICKVAL( Billable__c , &quot;Free&quot;) ,ISPICKVAL( Billable__c , &quot;Subscription Support&quot;)) , NOT( ISNULL( Attribution_Rate__c ) ), false) )</errorConditionFormula>
        <errorDisplayField>Attribution_Date__c</errorDisplayField>
        <errorMessage>Attribution rate field cannot have a value as this Attribution record is set to Non-Scoped or Scoped and Free or Scoped and Subscription Support.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Milestone_Period_is_closed_on_create</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISNEW(), Attribution_Period__r.Financial_Period_Closed__c )</errorConditionFormula>
        <errorDisplayField>Attribution_Date__c</errorDisplayField>
        <errorMessage>Record cannot be saved as milestone period is closed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Milestone_Period_is_closed_on_update</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISNEW() ) , NOT(RecordType.Name =&quot;Attribution ReadOnly Record Type&quot;), Attribution_Period__r.Financial_Period_Closed__c )</errorConditionFormula>
        <errorMessage>Record cannot be saved as milestone period is closed.</errorMessage>
    </validationRules>
</CustomObject>